# InCacheV2

./: .gitignore  ARCHITECTURE.md  Cargo.toml  README.md  results_linux  results_mac
src/: main.rs  protocol.rs  server.rs  store.rs
src/commands/: hashes.rs  lists.rs  mod.rs  server.rs  sets.rs  strings.rs
tests/: conftest.py  test_features.py  test_hashes.py  test_lists.py  test_server.py  test_sets.py  test_stress.py  test_strings.py
