[package]
name = "incache_v2"
version = "0.3.0"
edition = "2021"

[[bin]]
name = "incache_v2"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
itoa = "1"
memchr = "2"
mimalloc = { version = "0.1", features = ["override"] }
rustc-hash = "2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
target-cpu = "native"
