[package]
name = "incache_v2"
version = "0.5.0"
edition = "2021"

[[bin]]
name = "incache_v2"
path = "src/main.rs"

[dependencies]
bytes = "1"
itoa = "1"
memchr = "2"
mimalloc = { version = "0.1", features = ["override"] }
rustc-hash = "2"
libc = "0.2"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
